# microservice

./: README.md
base_files/async_service/: Cargo.toml
base_files/async_service/src/: main.rs
base_files/base/src/: main.rs
base_files/img_service/: Cargo.toml  readme.md
base_files/img_service/src/: main.rs
base_files/log_service/src/: main.rs
interaction/: Cargo.toml  README.md
interaction/src/: colors.rs  main.rs
loggin/: Cargo.toml
tiny_server/: Cargo.toml
tiny_server/src/: main.rs
