
[package]
name = "interact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10"
base64-serde = "0.3"
futures = "0.1"
failure = "0.1"
hyper = "0.12"
serde = "1.0"
serde_cbor = "0.8"
serde_derive = "0.8"
serde_json = "1.0"
rand = "0.5"
queryst = "2.0"
